--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node src/app/server.js",
-    "test": "jest --passWithNoTests",
+    "dev": "node src/app/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -13,13 +13,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.0",
-    "pgvector": "^0.2.1"
+    "pgvector": "^0.2.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.0.0",
     "eslint": "^8.0.0",
     "globals": "^13.0.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "jest-html-reporter": "^4.3.0",
+    "supertest": "^7.2.2"
   }
 }
